<resources>
    <string name="app_name">Share Rent</string>

    <!-- String Arrays for countries, cities, and items -->
    <string-array name="countries_list">
        <item>Select Country..</item>
        <item>Bahrain</item>
        <item>Egypt</item>
        <item>Jordan</item>
        <item>Kuwait</item>
        <item>Oman</item>
        <item>Qatar</item>
        <item>Saudi Arabia</item>
        <item>United Arab Emirates</item>
    </string-array>

    <string-array name="cities_list">
        <item>Select City..</item>
        <item>Abu Dhabi</item>
        <item>Alexandria</item>
        <item>Amman</item>
        <item>Aqaba</item>
        <item>Cairo</item>
        <item>Dammam</item>
        <item>Doha</item>
        <item>Dubai</item>
        <item>Irbid</item>
        <item>Jeddah</item>
        <item>Kuwait City</item>
        <item>Manama</item>
        <item>Muscat</item>
        <item>Riyadh</item>
        <item>Salalah</item>
        <item>Sharjah</item>
    </string-array>

    <string-array name="no_selection">
        <item>Select City..</item>
    </string-array>

    <string-array name="bahrain">
        <item>Select City..</item>
        <item>Manama</item>
    </string-array>

    <string-array name="egypt">
        <item>Select City..</item>
        <item>Cairo</item>
        <item>Alexandria</item>
    </string-array>

    <string-array name="jordan">
        <item>Select City..</item>
        <item>Amman</item>
        <item>Irbid</item>
        <item>Aqaba</item>
    </string-array>

    <string-array name="kuwait">
        <item>Select City..</item>
        <item>Kuwait City</item>
    </string-array>

    <string-array name="oman">
        <item>Select City..</item>
        <item>Muscat</item>
        <item>Salalah</item>
    </string-array>

    <string-array name="qatar">
        <item>Select City..</item>
        <item>Doha</item>
    </string-array>

    <string-array name="saudi_arabia">
        <item>Select City..</item>
        <item>Riyadh</item>
        <item>Dammam</item>
        <item>Jeddah</item>
    </string-array>

    <string-array name="emirates">
        <item>Select City..</item>
        <item>Abu Dhabi</item>
        <item>Dubai</item>
        <item>Sharjah</item>
    </string-array>

    <string-array name="baby_gear_items">
        <item>Select an item..</item>
        <item>Stroller</item>
        <item>Bed</item>
        <item>Car Seat</item>
        <item>High Chair</item>
        <item>Bath Tub</item>
        <item>Bouncer</item>
        <item>Sterilizer</item>
    </string-array>

    <!-- Buttons and clickable texts -->
    <string name="continue_button">Continue</string>
    <string name="action_login">Login</string>
    <string name="action_logout">Logout</string>
    <string name="action_sign_in"><u>Sign in</u></string>
    <string name="action_sign_up"><u>Sign Up</u></string>
    <string name="action_register">Register</string>
    <string name="forget_password"><u>Forgot Password?</u></string>
    <string name="action_reset_password">Reset Password</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="action_change_email">Change e-mail</string>
    <string name="action_change_password">Change password</string>
    <string name="action_delete_account">Delete account</string>
    <string name="action_select_from_gallery">Select from gallery</string>
    <string name="action_place_order">Place Order</string>

    <!-- EditTexts and TextViews hints and autofill -->
    <string name="rental_start_hint">Rental start</string>
    <string name="rental_end_hint">Rental end</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="name_hint">Name</string>
    <string name="phone_number_hint">Phone number</string>
    <string name="location_hint">Location</string>
    <string name="description_hint">Description..</string>
    <string name="rent_price_hint">Price..</string>
    <string name="new_email_hint">New e-mail</string>
    <string name="current_password_hint">Current Password</string>
    <string name="new_password_hint">New Password</string>
    <string name="confirm_new_password_hint">Confirm New Password</string>
    <string name="customer_full_name">Your Full Name</string>
    <string name="customer_email">Your Email</string>
    <string name="customer_phone_number">Your Phone Number</string>

    <!-- Images content descriptions -->
    <string name="application_main_image">Application Main Image</string>
    <string name="reference_image_stroller">Stroller</string>
    <string name="reference_image_bed">Bed</string>
    <string name="reference_image_car_seat">Car Seat</string>
    <string name="reference_image_high_chair">High Chair</string>
    <string name="reference_image_bath_tub">Bath Tub</string>
    <string name="reference_image_bouncer">Bouncer</string>
    <string name="reference_image_sterilizer">Sterilizer</string>
    <string name="location_symbol">Location Symbol</string>
    <string name="notification_bell">Notification Bell</string>
    <string name="shopping_cart_symbol">Shopping Cart Symbol</string>
    <string name="trash_symbol">Trash Symbol</string>
    <string name="user_symbol">User Symbol</string>
    <string name="phone_symbol">Phone Symbol</string>
    <string name="editing_pen_symbol">Editing Pen Symbol</string>
    <string name="baby_gear_item_photo">Photo of Baby Gear Item</string>
    <string name="item_provider_profile_picture">Item Provider Profile Picture</string>
    <string name="registered_user_profile_picture">Registered User Profile Picture</string>

    <!-- Texts distributed around the app -->
    <string name="choose_items_question">What do you want to rent?</string>
    <string name="stroller_item">Stroller</string>
    <string name="bed_item">Bed</string>
    <string name="car_seat_item">Car Seat</string>
    <string name="high_chair_item">High Chair</string>
    <string name="bath_tub_item">Bath Tub</string>
    <string name="bouncer_item">Bouncer</string>
    <string name="sterilizer_item">Sterilizer</string>
    <string name="not_registered">Not registered?</string>
    <string name="intro_text">Feel like home with just one click away.. All your needs for baby gear rentals are here!</string>
    <string name="item_provider">Do you have a baby gear essentials and want to rent them?</string>
    <string name="join_now">Join us and earn money!</string>
    <string name="total_price">Total Price&#160;</string>
    <string name="currency">&#160;$</string>
    <string name="multiplication">&#160;X&#160;</string>
    <string name="days_text">&#160;days =&#160;</string>
    <string name="proceed_to_rent">Proceed to Rent (</string>
    <string name="items_text">&#160;items)</string>
    <string name="reset_password_text">Please enter your registered e-mail to send you a password-reset link</string>
    <string name="price_per_day">$ / day</string>
    <string name="item_provider_information">Item provider information:</string>
    <string name="create_account">Create Account</string>
    <string name="already_registered">Already registered?</string>
    <string name="offered_items_question">What can you offer for renting?</string>
    <string name="list_header_text">No items added yet</string>
    <string name="enter_description">Enter a description for your item:</string>
    <string name="enter_rent_price">Enter a rent price ($):</string>
    <string name="upload_photo">Upload a photo for your item:</string>
    <string name="enter_new_email">Enter a new e-mail:</string>
    <string name="enter_passwords">Enter current and new passwords:</string>
    <string name="update_location">Update your location:</string>
    <string name="update_name">Update your name:</string>
    <string name="update_phone_number">Update your phone number:</string>
    <string name="menu_Login_status">Login Status</string>
    <string name="menu_notification">Notification</string>
    <string name="menu_shopping_cart">Shopping Cart</string>
    <string name="customer_contact_details">Please enter your contact details</string>
    <string name="place_order_header">You need to place an order for each items provider separately</string>
    <string name="rent_price">Rent Price</string>
    <string name="no_internet_connection">No internet connection.</string>
    <string name="no_results_found">No results found.</string>
    <string name="empty_list">No items added yet</string>
    <string name="edit_or_delete">Tab on each item to \'Edit\' or \'Delete\'</string>
    <string name="default_notification_channel_id">notification_channel</string>

</resources>