<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ChooseItemsActivity">

    <TextView
        android:id="@+id/destination"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/text_entry_background"
        android:padding="10dp"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/start_date"
            style="@style/dates_entry"
            android:autofillHints="Date"
            android:hint="@string/rental_start_hint" />

        <EditText
            android:id="@+id/end_date"
            style="@style/dates_entry"
            android:autofillHints="Date"
            android:hint="@string/rental_end_hint" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_primary_dark" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="30dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:gravity="center"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/choose_items_question"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <LinearLayout
                android:id="@+id/stroller_layout"
                android:layout_width="match_parent"
                style="@style/items_layout" >

                <ImageView
                    style="@style/item_reference_image"
                    android:contentDescription="@string/reference_image_stroller"
                    android:src="@drawable/stroller" />

                <TextView
                    style="@style/item_reference_text"
                    android:text="@string/stroller_item" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/bed_layout"
                android:layout_width="match_parent"
                style="@style/items_layout" >

                <ImageView
                    style="@style/item_reference_image"
                    android:contentDescription="@string/reference_image_bed"
                    android:src="@drawable/bed" />

                <TextView
                    style="@style/item_reference_text"
                    android:text="@string/bed_item" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/car_seat_layout"
                android:layout_width="match_parent"
                style="@style/items_layout" >

                <ImageView
                    style="@style/item_reference_image"
                    android:contentDescription="@string/reference_image_car_seat"
                    android:src="@drawable/car_seat" />

                <TextView
                    style="@style/item_reference_text"
                    android:text="@string/car_seat_item" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/high_chair_layout"
                android:layout_width="match_parent"
                style="@style/items_layout" >

                <ImageView
                    style="@style/item_reference_image"
                    android:contentDescription="@string/reference_image_high_chair"
                    android:src="@drawable/high_chair" />

                <TextView
                    style="@style/item_reference_text"
                    android:text="@string/high_chair_item" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/bath_tub_layout"
                android:layout_width="match_parent"
                style="@style/items_layout" >

                <ImageView
                    style="@style/item_reference_image"
                    android:contentDescription="@string/reference_image_bath_tub"
                    android:src="@drawable/bath_tub" />

                <TextView
                    style="@style/item_reference_text"
                    android:text="@string/bath_tub_item" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/bouncer_layout"
                android:layout_width="match_parent"
                style="@style/items_layout" >

                <ImageView
                    style="@style/item_reference_image"
                    android:contentDescription="@string/reference_image_bouncer"
                    android:src="@drawable/bouncer" />

                <TextView
                    style="@style/item_reference_text"
                    android:text="@string/bouncer_item" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/sterilizer_layout"
                android:layout_width="match_parent"
                style="@style/items_layout" >

                <ImageView
                    style="@style/item_reference_image"
                    android:contentDescription="@string/reference_image_sterilizer"
                    android:src="@drawable/sterilizer" />

                <TextView
                    style="@style/item_reference_text"
                    android:text="@string/sterilizer_item" />

            </LinearLayout>

            <FrameLayout
                style="@style/continue_buttons_frame_layout">

                <TextView
                    android:id="@+id/continue_btn"
                    style="@style/continue_buttons" />

            </FrameLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
