<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/header_text"
            android:layout_marginBottom="0dp"
            android:gravity="center"
            android:text="@string/customer_contact_details"
            android:textSize="18sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_input_layout"
            style="@style/text_input_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/your_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Full name"
                android:hint="@string/customer_full_name"
                android:inputType="textCapWords" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_input_layout"
            style="@style/text_input_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/your_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Email Address"
                android:hint="@string/customer_email"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone_input_layout"
            style="@style/text_input_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/your_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Phone Number"
                android:hint="@string/customer_phone_number"
                android:inputType="phone" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

</ScrollView>
