<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/header_text"
            android:text="@string/enter_passwords"
            android:textSize="18sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/current_password_layout"
            style="@style/text_input_layout"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="5dp"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/current_password"
                style="@style/password_input_edit_text"
                android:autofillHints="Password"
                android:hint="@string/current_password_hint" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/new_password_layout"
            style="@style/text_input_layout"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="5dp"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/new_password"
                style="@style/password_input_edit_text"
                android:autofillHints="Password"
                android:hint="@string/new_password_hint" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirm_password_layout"
            style="@style/text_input_layout"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="5dp"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirm_new_password"
                style="@style/password_input_edit_text"
                android:autofillHints="Password"
                android:hint="@string/confirm_new_password_hint" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

</ScrollView>