<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/list_view_background"
    android:orientation="vertical"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_weight="3"
            android:gravity="start"
            android:orientation="vertical">

            <TextView
                android:id="@+id/item_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:gravity="start"
                android:paddingStart="8dp"
                android:paddingTop="4dp"
                android:paddingEnd="8dp"
                android:paddingBottom="8dp"
                android:textSize="15sp"
                android:textStyle="bold"
                tools:text="Type" />

            <TextView
                android:id="@+id/item_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:ellipsize="end"
                android:gravity="start"
                android:maxLines="3"
                android:paddingStart="8dp"
                android:paddingTop="8dp"
                android:paddingEnd="8dp"
                android:paddingBottom="8dp"
                android:textSize="15sp"
                tools:text="Description" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/rent_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:gravity="start"
                    android:paddingBottom="8dp"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    tools:text="23" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:gravity="start"
                    android:paddingBottom="8dp"
                    android:text="@string/multiplication"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/number_of_days"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:gravity="start"
                    android:paddingBottom="8dp"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    tools:text="7" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:gravity="start"
                    android:paddingBottom="8dp"
                    android:text="@string/days_text"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/total_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:gravity="start"
                    android:paddingBottom="8dp"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    tools:text="161" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:gravity="start"
                    android:paddingStart="0dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="8dp"
                    android:text="@string/currency"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/item_photo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_weight="2"
            android:background="@drawable/list_border"
            android:contentDescription="@string/baby_gear_item_photo"
            android:minHeight="@android:dimen/thumbnail_height"
            android:padding="3dp"
            android:scaleType="centerCrop" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="4dp">

        <ImageView
            android:id="@+id/delete_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/trash_symbol"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:src="@drawable/trash_symbol" />

    </FrameLayout>

</LinearLayout>